GET /admin/user, POST /admin/template
