# pkg/common/types.gen.go
@@ -1,7 +1,7 @@
-// Package server provides primitives to interact the openapi HTTP API.
+// Package common provides primitives to interact the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
-package server
+package common
 
 import (
 	"time"
@@ -96,7 +96,7 @@ type ServerObject struct {
 type Template struct {
 
 	// kubernetes corev1/pod yaml based template
-	Bdoy        string `json:"bdoy"`
+	Body        string `json:"body"`
 	Description string `json:"description"`
 	Id          int    `json:"id"`
 	Name        string `json:"name"`
@@ -105,11 +105,14 @@ type Template struct {
 	Variables TemplateVariables `json:"variables"`
 }
 
-// TemplateVariables defines model for TemplateVariables.
-type TemplateVariables []struct {
+// TemplateVariable defines model for TemplateVariable.
+type TemplateVariable struct {
 	Name  string `json:"name"`
 	Value string `json:"value"`
 }
+
+// TemplateVariables defines model for TemplateVariables.
+type TemplateVariables []TemplateVariable
 
 // UserInfo defines model for UserInfo.
 type UserInfo struct {
